[workspace]
members = [
    "src/allowlist"
]
resolver = "2"

[workspace.package]
authors = ["Econia Labs <developers@econialabs.com>"]
license = "Apache-2.0"
homepage = "https://www.econialabs.com"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
move-core-types = { git = "https://github.com/aptos-labs/aptos-core"}
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}