# cspell:word serde

[dependencies]
axum = {version = "0.7.5", features = ["macros"]}
bb8 = "0.8.5"
bb8-redis = "0.15.0"
move-core-types = {workspace = true}
redis = "0.25.4"
thiserror = "1.0.61"
serde = {workspace = true}
strum = "0.26"
strum_macros = "0.26"
tokio = {workspace = true}

[package]
edition = "2021"
name = "allowlist"
version = "1.0.0"
