[[bin]]
name = "hello-world-dynamic"
path = "src/hello_world_dynamic.rs"

[[bin]]
name = "hello-world-jemalloc"
path = "src/hello_world_jemalloc.rs"

[[bin]]
name = "hello-world-mimalloc"
path = "src/hello_world_mimalloc.rs"

[dependencies]
mimalloc = {version = "0.1.43", features = ["secure"]}

[package]
edition = "2021"
name = "rust_builders"
version = "1.0.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
